add route for reset customer password
